<resources>
    <string name="app_name">Family Map</string>
    <string name="last_name">Last Name:</string>
    <string name="server_host">Server Host:</string>
    <string name="server_port">Server Port:</string>
    <string name="user_name">User Name:</string>
    <string name="password">Password:</string>
    <string name="first_name">First Name:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="success_toast">Login/register attempt successful!</string>
    <string name="failure_toast">Login/register attempt failed!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_textview_1">Click on a marker to see event details</string>
    <string name="search_button">Search button</string>
    <string name="settings_button">Settings button</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="title_activity_person">PersonActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="first_name2">First name</string>
    <string name="last_name2">Last name</string>
    <string name="gender2">Gender</string>
    <string name="life_event_title">Life Events</string>
    <string name="relatives_title">Family Members</string>
</resources>