<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginFragment">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="2"
        android:horizontalSpacing="0dp"
        android:rowCount="7"
        android:useDefaultMargins="false"
        android:verticalSpacing="0dp">

        <TextView
            android:id="@+id/hostTextView"
            android:layout_gravity="right"
            android:layout_margin="0dp"
            android:paddingVertical="15dp"
            android:text="@string/server_host"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/hostEditText"
            android:layout_width="250dp"
            android:layout_margin="0dp"
            android:inputType="text"
            android:paddingVertical="15dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/portTextView"
            android:layout_gravity="right"
            android:layout_margin="0dp"
            android:paddingVertical="15dp"
            android:text="@string/server_port"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/portEditText"
            android:layout_width="250dp"
            android:layout_margin="0dp"
            android:inputType="text"
            android:paddingVertical="15dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_gravity="right"
            android:layout_margin="0dp"
            android:paddingVertical="15dp"
            android:text="@string/user_name"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="250dp"
            android:layout_margin="0dp"
            android:inputType="text"
            android:paddingVertical="15dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:paddingVertical="15dp"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="250dp"
            android:layout_margin="0dp"
            android:inputType="textPassword"
            android:paddingVertical="15dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/firstNameTextView"
            android:layout_gravity="right"
            android:layout_margin="0dp"
            android:paddingVertical="15dp"
            android:text="@string/first_name"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="250dp"
            android:layout_margin="0dp"
            android:inputType="text"
            android:paddingVertical="15dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/lastNameTextView"
            android:layout_gravity="right"
            android:layout_margin="0dp"
            android:paddingVertical="15dp"
            android:text="@string/last_name"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="250dp"
            android:layout_margin="0dp"
            android:inputType="text"
            android:paddingVertical="15dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_gravity="right"
            android:layout_margin="0dp"
            android:paddingVertical="15dp"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="250dp"
            android:layout_margin="0dp"
            android:inputType="textEmailAddress"
            android:paddingVertical="15dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/genderTextView"
            android:layout_gravity="right"
            android:layout_margin="0dp"
            android:paddingVertical="15dp"
            android:text="@string/gender"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/mfRadioGroup">

            <RadioButton
                android:id="@+id/maleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <RadioButton
                android:id="@+id/femaleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

        </RadioGroup>

    </GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/sign_in"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/register"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_margin="5dp"/>

    </LinearLayout>

</LinearLayout>